refactor: 完成F-H1阶段API迁移与架构优化
- 迁移前端页面请求到统一API模块，移除硬编码request调用
- 新增审计日志API模块与前端页面集成
- 为EdgeType/SourceType新增枚举类型
- 添加乐观锁版本字段到ChangeTask与数据库表
- 新增Feature身份归一化器与图谱写入意图DTO
- 优化批量查询避免N+1问题
- 重构测试与服务类的批量数据加载逻辑
- 新增数据库迁移脚本与扫描版本统计字段
- 补充PWA服务工作者文档说明
- 重构Agent类支持AgentEnvelope合约调用